--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/b-fast-sando.html">B Fast Sando</a>
     </body>
 </html>
