feat: Add a new recipe, wrap all link elements
Wrapped all link tags in a paragraph element for
styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/b-fast-sando.html">B Fast Sando</a>
+        <p><a href="recipes/b-fast-sando.html">B Fast Sando</a></p>
+        <p><a href="recipes/spicy-chili-garlic-noodles.html">Spicy Chili Garlic Noodles</a></p>
     </body>
 </html>
