--- a/recipes/b-fast-sando.html
+++ b/recipes/b-fast-sando.html
@@ -28,6 +28,6 @@
             <li>Toast the Buns: Butter or oil the inverted cut sides of your burger buns. Toast them in the same pan over medium heat until golden brown.</li>
             <li>Assemble the Sando: On one of your toasted buns, add a slice of American cheese. Place the cooked egg on top. Add the Mortadella, lightly folded. Crown with the other toasted bun.</li>
         </ol>
-        <a href="../index.html">Back to Home</a>
+        <p><a href="../index.html">Back to Home</a></p>
     </body>
 </html>
