feat: Add a third page and meal label
Added a category to differentiate meals from the
time of day

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Morning Meal</h1>
+        <h2>In the Morning</h2>
         <p><a href="recipes/b-fast-sando.html">B Fast Sando</a></p>
+        <h2>Midday and Evening Meals</h2>
         <p><a href="recipes/spicy-chili-garlic-noodles.html">Spicy Chili Garlic Noodles</a></p>
+        <p><a href="recipes/pork-stir-fry.html">Pork Stir Fry</a></p>
     </body>
 </html>
