--- a/recipes/spicy-chili-garlic-noodles.html
+++ b/recipes/spicy-chili-garlic-noodles.html
@@ -11,25 +11,25 @@
         <p><a href="https://youtu.be/S-TmmjEN-V0?si=0OK9f4x30cG3Dwqr&t=589">Meals so Easy A College Student Could Make It</a></p>
         <h2>Ingredients</h2>
         <ul>
-            <li>Vegetable oil: 1/3 cup or 80 mL</li>
-            <li>Chili flakes: 3 tablespoons or 25 g (of choice, e.g., Sichuan red pepper flakes or gochugaru)</li>
-            <li>Garlic: Four cloves, grated</li>
-            <li>Sugar: 1/2 teaspoon or 3 g</li>
-            <li> MSG: 1/2 teaspoon or 3 g (optional, but noted as essential)</li>
-            <li>Green onions: Two, finely chopped</li>
-            <li>Soy sauce: 2 1/2 tablespoons or 22 g</li>
-            <li>White distilled vinegar: 1 tablespoon or 15 g</li>
-            <li>Lightly ground sesame seeds: 2 teaspoons or 10 g (optional)</li>
-            <li>Cooked noodles: Any type of cooked noodle will work, avoiding pasta. Chinese wheat noodles or ramen noodles (without the spice packet) are suggested</li>
+            <li><strong>Vegetable oil:</strong> 1/3 cup or 80 mL</li>
+            <li><strong>Chili flakes:</strong> 3 tablespoons or 25 g (of choice, e.g., Sichuan red pepper flakes or gochugaru)</li>
+            <li><strong>Garlic:</strong> Four cloves, grated</li>
+            <li><strong>Sugar:</strong> 1/2 teaspoon or 3 g</li>
+            <li><strong>MSG:</strong> 1/2 teaspoon or 3 g (optional, but noted as essential)</li>
+            <li><strong>Green onions:</strong> Two, finely chopped</li>
+            <li><strong>Soy sauce:</strong> 2 1/2 tablespoons or 22 g</li>
+            <li><strong>White distilled vinegar:</strong> 1 tablespoon or 15 g</li>
+            <li><strong>Lightly ground sesame seeds:</strong> 2 teaspoons or 10 g (optional)</li>
+            <li><strong>Cooked noodles:</strong> Any type of cooked noodle will work, avoiding pasta. Chinese wheat noodles or ramen noodles (without the spice packet) are suggested</li>
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>Prepare the Chili Oil Base: In a metal bowl (must be heat resistant, avoid plastic or glass), combine chili flakes, grated garlic, sugar, MSG (if using), finely chopped green onions, soy sauce, white distilled vinegar, and optionally, lightly ground sesame seeds. Whisk these ingredients together.</li>
-            <li>Heat the Oil: Heat 1/3 cup or 80 mL of vegetable oil over medium heat until very hot, around 350°F (you can guess if you don't have a thermometer).</li>
-            <li>Combine Hot Oil and Spices: Carefully pour the hot oil over the spice mixture in the metal bowl. Be cautious as it will sputter and pop violently.</li>
-            <li>Cook Noodles: Boil your chosen noodles according to package directions. Most Chinese wheat noodles take 2 to 4 minutes. Drain them once cooked.</li>
-            <li>Assemble: Toss the drained noodles in your prepared chili oil. Pop into a bowl and garnish with additional green onion if desired.</li>
+            <li><strong>Prepare the Chili Oil Base:</strong> In a metal bowl (must be heat resistant, avoid plastic or glass), combine chili flakes, grated garlic, sugar, MSG (if using), finely chopped green onions, soy sauce, white distilled vinegar, and optionally, lightly ground sesame seeds. Whisk these ingredients together.</li>
+            <li><strong>Heat the Oil:</strong> Heat 1/3 cup or 80 mL of vegetable oil over medium heat until very hot, around 350°F (you can guess if you don't have a thermometer).</li>
+            <li><strong>Combine Hot Oil and Spices:</strong> Carefully pour the hot oil over the spice mixture in the metal bowl. Be cautious as it will sputter and pop violently.</li>
+            <li><strong>Cook Noodles:</strong> Boil your chosen noodles according to package directions. Most Chinese wheat noodles take 2 to 4 minutes. Drain them once cooked.</li>
+            <li><strong>Assemble:</strong> Toss the drained noodles in your prepared chili oil. Pop into a bowl and garnish with additional green onion if desired.</li>
         </ol>
-        <p><a href="../index.html">Back to Home</a></p>
+        <p><a href="../index.html"><em>Back to Home</em></a></p>
     </body>
 </html>
