--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     </head>
     <body>
         <h1>Morning Meal</h1>
-        <h2>In the Morning</h2>
-        <p><a href="recipes/b-fast-sando.html">B Fast Sando</a></p>
-        <h2>Midday and Evening Meals</h2>
-        <p><a href="recipes/spicy-chili-garlic-noodles.html">Spicy Chili Garlic Noodles</a></p>
-        <p><a href="recipes/pork-stir-fry.html">Pork Stir Fry</a></p>
+            <h2>In the Morning</h2>
+            <ul>
+                <li>
+                <p><a href="recipes/b-fast-sando.html">B Fast Sando</a></p>
+            </li>
+            </ul>
+            <h2>Midday and Evening Meals</h2>
+            <ul>
+                <li><p><a href="recipes/spicy-chili-garlic-noodles.html">Spicy Chili Garlic Noodles</a></p></li>
+                <li><p><a href="recipes/pork-stir-fry.html">Pork Stir Fry</a></p></li>
+            </ul>
+            
+        
     </body>
 </html>
