--- a/recipes/pork-stir-fry.html
+++ b/recipes/pork-stir-fry.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Pork Stir Fry</h1>
-        <img src="../images/pork-stir-fry.jpg">
+        <img src="../images/pork-stir-fry.jpg" alt="Glazing pork with thinly sliced jalapenos as garnish">
         <p>This recipe is presented as a complete meal option and encourages venturing out to try new proteins, highlighting pork as a cheap and underrated cut. The stir-fry balances acidity, sweetness, and umami, with pork becoming crispy from the cornstarch, creating a glossy, thick, almost teriyaki-like glaze. A recipe by <a href="https://www.youtube.com/@JoshuaWeissman"><em>Joshua Weissman</em></a></p>
         <p><a href="https://youtu.be/S-TmmjEN-V0?si=grGktkXnuNKmFll0&t=681"><em>Meals So Easy A College Student Could Make It</em></a></p>
         <h2>Ingredients</h2>
@@ -21,15 +21,15 @@
             <li><strong>White distilled vinegar:</strong> 1 tablespoon or 15 g</li>
             <li><strong>Garlic:</strong> Four cloves, finely chopped</li>
             <li><strong>Jalapeno:</strong> Thinly sliced (as optional garnish)</li>
-            <h3>Steps</h3>
-            <ol>
-                <li><strong>Prepare the Pork:</strong> Slice 1 pound or 450 g of boneless Boston Butt Roast as thinly as possible. Freezing for an hour can help with thin slicing but is not mandatory.</li>
-                <li><strong>Sear the Pork:</strong> Heat a large pan (any large pan on any heat surface will do, although a wok is traditional) over very high heat with a couple of tablespoons of vegetable oil. Once the pan is nearly smoking, toss your sliced pork in cornstarch to coat all sides, shaking off the excess. Sear the pork in batches for 2 minutes per side.</li>
-                <li><strong>Add Vegetables:</strong> Add half a thinly sliced yellow onion and one thinly sliced jalapeno to the pan. Toss constantly until the vegetables begin to soften, about 1 minute.</li>
-                <li><strong>Create the Sauce:</strong> Add 1 tablespoon or 12 g of sugar, 2 tablespoons or 30 g of soy sauce, and 1 tablespoon or 15 g of white distilled vinegar to the pan. Toss constantly until the sauce reduces into a glossy, beautiful syrup coating all pieces.</li>
-                <li><strong>Finish and Serve:</strong> Cut off the heat. Add four cloves of finely chopped garlic and toss until evenly distributed. Serve immediately, with thinly sliced jalapeno as garnish if desired.</li>
-                <p><a href="../inde"><em>Back to Home</em></a></p>
-            </ol>
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>Prepare the Pork:</strong> Slice 1 pound or 450 g of boneless Boston Butt Roast as thinly as possible. Freezing for an hour can help with thin slicing but is not mandatory.</li>
+            <li><strong>Sear the Pork:</strong> Heat a large pan (any large pan on any heat surface will do, although a wok is traditional) over very high heat with a couple of tablespoons of vegetable oil. Once the pan is nearly smoking, toss your sliced pork in cornstarch to coat all sides, shaking off the excess. Sear the pork in batches for 2 minutes per side.</li>
+            <li><strong>Add Vegetables:</strong> Add half a thinly sliced yellow onion and one thinly sliced jalapeno to the pan. Toss constantly until the vegetables begin to soften, about 1 minute.</li>
+            <li><strong>Create the Sauce:</strong> Add 1 tablespoon or 12 g of sugar, 2 tablespoons or 30 g of soy sauce, and 1 tablespoon or 15 g of white distilled vinegar to the pan. Toss constantly until the sauce reduces into a glossy, beautiful syrup coating all pieces.</li>
+            <li><strong>Finish and Serve:</strong> Cut off the heat. Add four cloves of finely chopped garlic and toss until evenly distributed. Serve immediately, with thinly sliced jalapeno as garnish if desired.</li>
+        </ol>
+        <p><a href="../index.html"><em>Back to Home</em></a></p>
     </body>
 </html>
